VIdeos uploaded to Storage. New States to retrieve the videos. Passing these to the component. (This is bad and would need refactoring) Popups renamed to be specific in their role. New CSS class to fix the vertical spacing on non-mathjax. Changed for to htmlFor in labels for radio buttons.

--- a/src/styles/customStyle.css
+++ b/src/styles/customStyle.css
@@ -114,6 +114,10 @@
   cursor: pointer;
 }
 
+.mathjaxFakery {
+  margin: 1em 0;
+}
+
 .buttonCheck {
   padding: 15px 32px;
   margin: 15px 32px;
@@ -151,7 +155,6 @@ video {
   width: 100%;
   height: auto;
   max-width: 50vw;
-
 }
 
 /* MISC STYLE */
